--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body {
     color: white;
     text-align: center;
     font-family: Arial, sans-serif;
+    overflow: hidden;
 }
 
 body a {
@@ -106,7 +107,8 @@ footer {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
-    padding: 50px;
+    padding: 55px 0 55px 0;
+    
 }
 header{
     height: 20%;
